(env
 (dev
  ; TODO :standard is
  ; -w @1..3@5..28@30..39@43@46..47@49..57@61..62-40 -strict-sequence -strict-formats -short-paths -keep-locs 
  (flags (-w +A-4-6-29-44-45-52 -warn-error +a)))
 (release
  (flags (:standard -O3))))

(dirs :standard \ external)

(executables
 (names main efuns_client)
 (libraries
     ; system libs
     str unix

     ; efuns libs
     efuns_c
     efuns_commons
     efuns_core 
     efuns_graphics efuns_graphics_gtk_cairo2
     efuns_features ;efuns_ipc
     efuns_major_modes efuns_minor_modes
     efuns_prog_modes efuns_text_modes
     efuns_config

     ; pfff libs
     efuns_pfff_modes
 )

 ; need that, otherwise all the [@@interactive] are not executed
 (link_flags (-linkall))
 ; for ocamldebug
 (modes byte)
)


(install
 (package efuns)
 (section bin)
 (files (main.exe as efun) (efuns_client.exe as efuns_client))
)
