opam-version: "2.0"
name: "efuns"
version: "0.1.0"
synopsis: "Stuff"
description: """
More stuff
"""

maintainer: "Yoann Padioleau <pad@r2c.dev>"
authors: [ "Yoann Padioleau <pad@r2c.dev>" ]
license: "LGPL-2.1"
homepage: "https://semgrep.dev"
dev-repo: "git+https://github.com/aryx/fork-efuns"
bug-reports: "https://github.com/aryx/fork-efuns/issues"

# These are build dependencies.
# Development-only dependencies are in 'dev/dev.opam'.
#
depends: [
  "dune" {>= "2.7.0" }
  "lablgtk"
  "cairo2-gtk"
  "cairo2-pango"
  "ppxlib" {= "0.20.0" }
]

build: [make]

